--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -30,6 +30,7 @@
         android:layout_margin="@dimen/material_generic"
         android:textSize="@dimen/eighteen_sp"
         android:gravity="center_horizontal"
+        android:text="@string/loading"
         android:visibility="gone"
         />
 </LinearLayout>
