--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -22,6 +22,7 @@
         android:indeterminate="true"
         android:gravity="center_horizontal"
         android:visibility="gone"
+        android:layout_marginTop="@dimen/material_generic_medium"
         />
     <TextView
         android:id="@+id/searchInfoText"
@@ -32,5 +33,6 @@
         android:gravity="center_horizontal"
         android:text="@string/loading"
         android:visibility="gone"
+        android:textColor="@color/white"
         />
 </LinearLayout>
