--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".home_page.ui.transfer.TransferFragment"
-    android:background="@android:color/transparent"
+    android:background="@null"
     android:gravity="center_vertical|center_horizontal"
     android:orientation="horizontal"
     >
