--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
 <!--    <color name="white_translucent_2">#30FFFFFF</color>-->
     <color name="white_grey_1">#464a5b</color>
     <color name="navy_blue">#1a1e34</color>
+    <color name="highlight_yellow">#FFEB6B</color>
+    <color name="highlight_yellow_trans">#33FFEB6B</color>
     <color name="navy_blue_translucent_30">#30FFFFFF</color>
     <color name="navy_blue_alt">#262a3e</color>
     <color name="pink">#bd5dfb</color>
