--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -13,7 +14,6 @@
         android:divider="@null"
         android:scrollbars="none"
         android:descendantFocusability="afterDescendants"
-        android:layout_margin="@dimen/material_generic_medium"
         />
     <ProgressBar
         android:id="@+id/loadingProgress"
@@ -22,6 +22,15 @@
         android:indeterminate="true"
         android:gravity="center_horizontal"
         android:visibility="gone"
+        android:layout_marginTop="@dimen/material_generic_medium"
+        />
+    <ImageView
+        android:id="@+id/empty_result_image"
+        app:srcCompat="@drawable/ic_baseline_forest_32"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/sixty_four_dp"
+        android:visibility="gone"
+        android:gravity="center_horizontal"
         android:layout_marginTop="@dimen/material_generic_medium"
         />
     <TextView
