--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 <!--    <color name="white_translucent">#10FFFFFF</color>-->
-<!--    <color name="white_translucent_2">#30FFFFFF</color>-->
+    <color name="white_translucent_2">#30FFFFFF</color>
     <color name="white_grey_1">#464a5b</color>
     <color name="navy_blue">#1a1e34</color>
     <color name="highlight_yellow">#FFEB6B</color>
