Add bottom sheet audio player

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="orange">#FF7F50</color>
     <color name="red">#FF5733</color>
     <color name="accent_blue">#2196F3</color>
+    <color name="holo_dark_background">#303030</color>
 </resources>
