--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="sixty_four_dp">64dp</dimen>
     <dimen name="material_generic_large">72dp</dimen>
     <dimen name="material_sheet_peek_height">400dp</dimen>
+    <dimen name="audio_player_sheet_height">500dp</dimen>
     <dimen name="files_tab_heights">180dp</dimen>
     <dimen name="twelve_dp">12dp</dimen>
     <dimen name="six_dp">6dp</dimen>
