--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -1,106 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/navy_blue"
     >
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="?listPreferredItemHeightSmall"
-        android:scrollbars="none"
-        >
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="@dimen/four_dp"
-            >
-            <Button
-                android:id="@+id/filter_images_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/images"
-                android:layout_marginLeft="@dimen/material_generic"
-                android:layout_marginStart="@dimen/material_generic"
-                app:strokeColor="@color/navy_blue"
-                app:cornerRadius="@dimen/material_generic"
-                app:rippleColor="@color/highlight_yellow"
-                android:textColor="@color/navy_blue"
-                />
-            <Button
-                android:id="@+id/filter_videos_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/videos"
-                android:layout_marginLeft="@dimen/material_generic"
-                android:layout_marginStart="@dimen/material_generic"
-                app:cornerRadius="@dimen/material_generic"
-                app:rippleColor="@color/highlight_yellow"
-                android:textColor="@color/navy_blue"
-                />
-            <Button
-                android:id="@+id/filter_audios_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/audios"
-                android:layout_marginLeft="@dimen/material_generic"
-                android:layout_marginStart="@dimen/material_generic"
-                app:cornerRadius="@dimen/material_generic"
-                app:rippleColor="@color/highlight_yellow"
-                android:textColor="@color/navy_blue"
-                />
-            <Button
-                android:id="@+id/filter_documents_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/documents"
-                android:layout_marginLeft="@dimen/material_generic"
-                android:layout_marginStart="@dimen/material_generic"
-                android:layout_marginRight="@dimen/material_generic"
-                app:cornerRadius="@dimen/material_generic"
-                app:rippleColor="@color/highlight_yellow"
-                android:textColor="@color/navy_blue"
-                />
-        </LinearLayout>
-    </HorizontalScrollView>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/searchListView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null"
-        android:scrollbars="none"
-        android:descendantFocusability="afterDescendants"
+        android:orientation="vertical"
+        android:background="@color/navy_blue"
+        >
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="?listPreferredItemHeightSmall"
+            android:scrollbars="none"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:padding="@dimen/four_dp"
+                >
+                <Button
+                    android:id="@+id/filter_images_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/images"
+                    android:layout_marginLeft="@dimen/material_generic"
+                    android:layout_marginStart="@dimen/material_generic"
+                    app:cornerRadius="@dimen/material_generic"
+                    app:rippleColor="@color/highlight_yellow"
+                    android:textColor="@color/navy_blue"
+                    />
+                <Button
+                    android:id="@+id/filter_videos_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/videos"
+                    android:layout_marginLeft="@dimen/material_generic"
+                    android:layout_marginStart="@dimen/material_generic"
+                    app:cornerRadius="@dimen/material_generic"
+                    app:rippleColor="@color/highlight_yellow"
+                    android:textColor="@color/navy_blue"
+                    />
+                <Button
+                    android:id="@+id/filter_audios_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/audios"
+                    android:layout_marginLeft="@dimen/material_generic"
+                    android:layout_marginStart="@dimen/material_generic"
+                    app:cornerRadius="@dimen/material_generic"
+                    app:rippleColor="@color/highlight_yellow"
+                    android:textColor="@color/navy_blue"
+                    />
+                <Button
+                    android:id="@+id/filter_documents_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/documents"
+                    android:layout_marginLeft="@dimen/material_generic"
+                    android:layout_marginStart="@dimen/material_generic"
+                    android:layout_marginRight="@dimen/material_generic"
+                    app:cornerRadius="@dimen/material_generic"
+                    app:rippleColor="@color/highlight_yellow"
+                    android:textColor="@color/navy_blue"
+                    />
+            </LinearLayout>
+        </HorizontalScrollView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/searchListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@null"
+            android:scrollbars="none"
+            android:descendantFocusability="afterDescendants"
+            />
+        <ProgressBar
+            android:id="@+id/loadingProgress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:gravity="center_horizontal"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/material_generic_medium"
+            />
+        <ImageView
+            android:id="@+id/empty_result_image"
+            app:srcCompat="@drawable/ic_baseline_forest_32"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/sixty_four_dp"
+            android:visibility="gone"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="@dimen/material_generic_medium"
+            />
+        <TextView
+            android:id="@+id/searchInfoText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/material_generic"
+            android:textSize="@dimen/eighteen_sp"
+            android:gravity="center_horizontal"
+            android:text="@string/loading"
+            android:visibility="gone"
+            android:textColor="@color/white"
+            />
+    </LinearLayout>
+    <com.amaze.fileutilities.utilis.FastScroller
+        android:id="@+id/fastscroll"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="match_parent"
         />
-    <ProgressBar
-        android:id="@+id/loadingProgress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:gravity="center_horizontal"
-        android:visibility="gone"
-        android:layout_marginTop="@dimen/material_generic_medium"
-        />
-    <ImageView
-        android:id="@+id/empty_result_image"
-        app:srcCompat="@drawable/ic_baseline_forest_32"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/sixty_four_dp"
-        android:visibility="gone"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="@dimen/material_generic_medium"
-        />
-    <TextView
-        android:id="@+id/searchInfoText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/material_generic"
-        android:textSize="@dimen/eighteen_sp"
-        android:gravity="center_horizontal"
-        android:text="@string/loading"
-        android:visibility="gone"
-        android:textColor="@color/white"
-        />
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
