--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="blue">#FF4287f5</color>
     <color name="black">#FF000000</color>
+    <color name="black_70">#70000000</color>
     <color name="white">#FFFFFFFF</color>
 <!--    <color name="white_translucent">#10FFFFFF</color>-->
     <color name="white_translucent_2">#30FFFFFF</color>
