--- a/app/src/main/res/layout/fragment_audios_list.xml
+++ b/app/src/main/res/layout/fragment_audios_list.xml
@@ -1,46 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/navy_blue"
-        >
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/audiosListView"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="@null"
-            android:scrollbars="none"
-            android:descendantFocusability="afterDescendants"
+            android:orientation="vertical"
+            android:background="@color/navy_blue"
+            >
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/audiosListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@null"
+                android:scrollbars="none"
+                android:descendantFocusability="afterDescendants"
+                />
+            <ProgressBar
+                android:id="@+id/loadingProgress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:gravity="center_horizontal"
+                />
+            <TextView
+                android:id="@+id/audiosListInfoText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/material_generic"
+                android:textSize="@dimen/eighteen_sp"
+                android:gravity="center_horizontal"
+                />
+        </LinearLayout>
+        <com.amaze.fileutilities.utilis.FastScroller
+            android:id="@+id/fastscroll"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_height="match_parent"
             />
-        <ProgressBar
-            android:id="@+id/loadingProgress"
-            android:layout_width="match_parent"
+    </RelativeLayout>
+    <LinearLayout
+        android:id="@+id/layoutBottomSheet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxHeight="@dimen/audio_player_sheet_height"
+        android:background="@drawable/background_curved"
+        android:clipToPadding="false"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="@dimen/eight_dp"
+        app:behavior_hideable="false"
+        app:behavior_peekHeight="100dp"
+        app:layout_behavior="@string/bottom_sheet_behavior"
+        android:visibility="gone"
+        >
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:indeterminate="true"
-            android:gravity="center_horizontal"
+            android:textStyle="bold"
+            android:textSize="@dimen/eighteen_sp"
+            android:textColor="@color/white"
+            android:layout_marginTop="@dimen/material_generic"
             />
         <TextView
-            android:id="@+id/audiosListInfoText"
+            android:id="@+id/album"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/six_dp"
+            android:textSize="@dimen/eight_sp"
+            android:textColor="@color/grey_color"
+            />
+        <TextView
+            android:id="@+id/artist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/six_dp"
+            android:textSize="@dimen/twelve_sp"
+            android:textColor="@color/white"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/material_generic_medium"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_marginTop="@dimen/twenty_four_dp"
+            >
+            <TextView
+                android:id="@+id/time_elapsed"
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/eight_sp"
+                android:textColor="@color/grey_color"
+                android:layout_weight="0.1"
+                android:layout_marginRight="@dimen/two_dp"
+                android:layout_marginEnd="@dimen/two_dp"
+                />
+            <SeekBar
+                android:id="@+id/seekBar"
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:progressDrawable="@drawable/seekbar_accent"
+                android:thumb="@color/white"
+                android:layout_weight="0.8"
+                />
+            <com.masoudss.lib.WaveformSeekBar
+                android:id="@+id/waveformSeekbar"
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.8"
+                android:visibility="gone"
+                app:wave_max_progress="100"
+                app:wave_width="@dimen/two_dp"
+                app:wave_gap="1dp"
+                app:wave_min_height="@dimen/eight_dp"
+                app:wave_corner_radius="@dimen/two_dp"
+                app:wave_background_color="@color/grey_color"
+                app:wave_progress_color="@color/highlight_yellow"
+                app:wave_gravity="center"
+                />
+            <TextView
+                android:id="@+id/track_length"
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/eight_sp"
+                android:textColor="@color/grey_color"
+                android:layout_weight="0.1"
+                android:layout_marginLeft="@dimen/two_dp"
+                android:layout_marginStart="@dimen/two_dp"
+                />
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/material_generic"
-            android:textSize="@dimen/eighteen_sp"
             android:gravity="center_horizontal"
-            />
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/material_generic"
+            android:layout_marginBottom="@dimen/material_generic"
+            >
+            <ImageView
+                android:id="@+id/prevButton"
+                android:layout_width="@dimen/minimal_icon_size"
+                android:layout_height="@dimen/minimal_icon_size"
+                app:srcCompat="@drawable/ic_round_skip_previous_32"
+                android:layout_marginRight="@dimen/material_generic"
+                android:layout_marginEnd="@dimen/material_generic"
+                />
+            <ImageView
+                android:id="@+id/playButton"
+                app:srcCompat="@drawable/ic_round_pause_circle_32"
+                android:layout_width="@dimen/minimal_icon_size"
+                android:layout_height="@dimen/minimal_icon_size"
+                android:layout_marginRight="@dimen/material_generic"
+                android:layout_marginEnd="@dimen/material_generic"
+                />
+            <ImageView
+                android:id="@+id/nextButton"
+                android:layout_width="@dimen/minimal_icon_size"
+                android:layout_height="@dimen/minimal_icon_size"
+                app:srcCompat="@drawable/ic_round_skip_next_32"
+                />
+        </LinearLayout>
     </LinearLayout>
-    <com.amaze.fileutilities.utilis.FastScroller
-        android:id="@+id/fastscroll"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="match_parent"
-        />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
