--- a/app/src/main/res/layout/fragment_files.xml
+++ b/app/src/main/res/layout/fragment_files.xml
@@ -15,6 +15,7 @@
         >
         <!-- Internal storage -->
         <LinearLayout
+            android:id="@+id/internal_storage_tab"
             android:layout_width="match_parent"
             android:layout_height="@dimen/files_tab_heights"
             android:background="@drawable/background_curved"
