--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -28,16 +28,30 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
+
+    <TextView
+        android:id="@+id/version"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/six_dp"
+        android:text="@string/version"
+        android:textSize="@dimen/eighteen_sp"
+        android:textColor="@color/grey_color"
+        app:layout_goneMarginTop="@dimen/eight_dp"
+        app:layout_constraintTop_toBottomOf="@id/team_amaze"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
     <TextView
         android:id="@+id/rights_reserved"
-        android:layout_width="@dimen/zero_dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/six_dp"
         android:text="@string/rights_reserved"
         android:textSize="@dimen/twelve_sp"
         android:textColor="@color/white"
         app:layout_goneMarginTop="@dimen/eight_dp"
-        app:layout_constraintTop_toBottomOf="@id/team_amaze"
+        app:layout_constraintTop_toBottomOf="@id/version"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
