--- a/app/src/main/res/layout/fragment_audios_list.xml
+++ b/app/src/main/res/layout/fragment_audios_list.xml
@@ -90,20 +90,19 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/material_generic_medium"
+            android:layout_height="@dimen/sixty_four_dp"
             android:orientation="horizontal"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_marginTop="@dimen/twenty_four_dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:layout_marginTop="@dimen/material_generic"
             >
             <TextView
                 android:id="@+id/time_elapsed"
                 android:layout_width="@dimen/zero_dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:textSize="@dimen/eight_sp"
                 android:textColor="@color/grey_color"
                 android:layout_weight="0.1"
-                android:layout_marginRight="@dimen/two_dp"
-                android:layout_marginEnd="@dimen/two_dp"
+                android:gravity="center_horizontal|center_vertical"
                 />
             <SeekBar
                 android:id="@+id/seekBar"
@@ -120,10 +119,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.8"
                 android:visibility="gone"
-                app:wave_max_progress="100"
                 app:wave_width="@dimen/two_dp"
                 app:wave_gap="1dp"
-                app:wave_min_height="@dimen/eight_dp"
+                app:wave_min_height="@dimen/six_dp"
                 app:wave_corner_radius="@dimen/two_dp"
                 app:wave_background_color="@color/grey_color"
                 app:wave_progress_color="@color/highlight_yellow"
@@ -132,12 +130,11 @@
             <TextView
                 android:id="@+id/track_length"
                 android:layout_width="@dimen/zero_dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:textSize="@dimen/eight_sp"
                 android:textColor="@color/grey_color"
                 android:layout_weight="0.1"
-                android:layout_marginLeft="@dimen/two_dp"
-                android:layout_marginStart="@dimen/two_dp"
+                android:gravity="center_horizontal|center_vertical"
                 />
         </LinearLayout>
         <LinearLayout
